First implementation of new ScrollPane Skin and migration of whole project to modules